bug in create api fixed

--- a/src/app/create-api/create-api.component.html
+++ b/src/app/create-api/create-api.component.html
@@ -16,7 +16,7 @@
       </div>
     </div>
   </div>
-  <button class="creator_button btn" (click)="uploadApick()">Create Apick!</button>
+  <button [disabled]="docsSave.length==0" class="creator_button btn" (click)="uploadApick()">Create Apick!</button>
 </div>
 <div class="main_json">
   <h4 class="creator_title text-center">JSON DATA</h4>
@@ -24,7 +24,7 @@
     <input pattern="[A-Za-z0-9]+" class="creator_input form-control" type="text" formControlName="endpoint" (input)="validateEndpointName()"
       [class.active]="endpointFail" placeholder="Endpoint name" />
     <textarea formControlName="docs" placeholder="Paste here your JSON and choise a endpoint name"></textarea>
-    <button class="creator_button btn" type="button" (click)="saveJsonData(formJson.value.docs)">
+    <button [disabled]="!formCreator.valid" class="creator_button btn" type="button" (click)="saveJsonData(formJson.value.docs)">
       Confirm data
     </button>
   </form>
