--- a/src/app/modify-api/modify-api.component.html
+++ b/src/app/modify-api/modify-api.component.html
@@ -1,1 +1,5 @@
-<p>modify-api works!</p>
+<div class="modify_main">
+    <div class="modify_data" ></div>
+    <div class="modify_methods"></div>
+</div>
+<div class="modify_endpoint"></div>
