--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,7 +38,7 @@ body {
 .main {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 90px);
   border-radius: 10px;
   border: solid 1px rgb(232, 232, 232);
   background: rgba(156, 156, 156, 0.7);
@@ -171,7 +171,7 @@ body {
 }
 .searcher {
   .searcher_input {
-    width: 400px;
+    width: 370px;
     padding: 5px 16px;
     border: solid 0.8px gray;
     border-radius: 3px;
@@ -274,4 +274,19 @@ body {
 app-your-apis{
   height: calc(100vh - 89px);
   display: block;
+}
+
+// MODIFY APICK - MODIFY APICK - MODIFY APICK - MODIFY APICK
+
+.modify_main{
+
+  .modify_data{
+
+  }
+  .modify_methods{
+
+  }
+}
+.modify_endpoint{
+  
 }
