--- a/src/app/your-apis/your-apis.component.html
+++ b/src/app/your-apis/your-apis.component.html
@@ -19,5 +19,5 @@
     </div>
   </div>
   <app-create-api class="main_division" *ngIf="creatorView"></app-create-api>
-  <app-modify-api class="main_division" *ngIf="apiView" [data]='dataToEdit'></app-modify-api>
+  <app-modify-api class="main_division" *ngIf="apiView" [dataApick]='dataToEdit' ></app-modify-api>
 </main>
