--- a/src/app/apiview/apiview.component.html
+++ b/src/app/apiview/apiview.component.html
@@ -9,10 +9,19 @@
         </div>
         <div class="endpoints">
             <h3>ENDPOINTS</h3>
-            <p *ngFor="let endpoint of endpoints">localhost:3000/api/apick/{{apick._id}}/{{endpoint.endpoint}}</p>
+            <div *ngFor="let endpoint of endpoints">
+                <p>localhost:3000/api/apick/{{apick._id}}/{{endpoint.endpoint}}</p>
+                <select class="form-select endpoint_select" name="method" #method>
+                    <option disabled selected>Choose an option</option>
+                    <option *ngFor="let method of endpoint.methods" [value]="method" >{{method}}</option>
+                </select>
+                <button class="btn endpoint_launch btn-dark" (click)="launchTest(endpoint.endpoint, method)">Launch test!</button>
+            </div>
+            
+
         </div>
     </div>
     <div class="main_json">
-        respuesta json
+        <pre class="json_response">{{response | json}}</pre>
     </div>
 </main>
