api test method post working

--- a/src/app/apiview/apiview.component.html
+++ b/src/app/apiview/apiview.component.html
@@ -9,9 +9,9 @@
         </div>
         <div class="endpoints">
             <h3>ENDPOINTS</h3>
-            <div *ngFor="let endpoint of endpoints">
+            <div class="endpoints_div" *ngFor="let endpoint of endpoints">
                 <p>localhost:3000/api/apick/{{apick._id}}/{{endpoint.endpoint}}</p>
-                <select class="form-select endpoint_select" name="method" #method>
+                <select class="form-select endpoints_select" name="method" #method>
                     <option disabled selected>Choose an option</option>
                     <option *ngFor="let method of endpoint.methods" [value]="method" >{{method}}</option>
                 </select>
@@ -22,6 +22,7 @@
         </div>
     </div>
     <div class="main_json">
+        <textarea class="json_body" [(ngModel)]="objectToPost"></textarea>
         <pre class="json_response">{{response | json}}</pre>
     </div>
 </main>
