--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,10 +82,19 @@ body {
   .main_json {
     width: 40%;
     height: 100%;
+    .json_body{
+      background-color: black;
+      color: white;
+      height: 39%;
+      width: 100%;
+      overflow: auto;
+      margin: 0;
+      resize: none;
+    }
     .json_response{
       background-color: black;
       color: white;
-      height: 100%;
+      height: 60%;
       overflow: auto;
     }
   }
@@ -259,6 +268,20 @@ body {
 }
 .endpoints {
   margin-top: 20px;
+  .endpoints_div{
+    display: flex;
+    margin-bottom: 10px;
+    p{
+      background: black;
+      color: white;
+      border-bottom: 1px solid #61ff6d;
+      margin-bottom: 0;
+      padding: 7px;
+    }
+  }
+  .endpoints_select{
+    width: 180px;
+  }
 }
 
 
