--- a/src/styles.scss
+++ b/src/styles.scss
@@ -266,6 +266,9 @@ body {
 .method_button-inactive {
   background-color: rgb(255, 194, 194);
 }
+.error {
+  background-color: rgb(255, 194, 194);
+}
 .endpoints {
   margin-top: 20px;
   .endpoints_div{
