if imageUrl is false, another img is loaded

--- a/src/app/api-data/api-data.component.html
+++ b/src/app/api-data/api-data.component.html
@@ -1,4 +1,4 @@
-<img class="apick_image" src={{apickData.imageUrl}} alt=" apic" >
+<img class="apick_image" src={{apickData.imageUrl}} alt="{{apickData._id}}" (error)="switchImg(true)">
 <div class="apick_text">
     <h2 class="apick_title">{{apickData.title}}</h2>
     <p class="apick_description">{{apickData.description}}</p>
