--- a/src/app/your-apis/your-apis.component.html
+++ b/src/app/your-apis/your-apis.component.html
@@ -7,13 +7,12 @@
     <div class="apis_list">
       <div *ngFor="let api of data">
         <div class="myapick">
-          <img class="myapick_image" src="{{ api.imageUrl }}" alt="" />
+          <img class="myapick_image" src="{{api.imageUrl}}" alt="{{api._id}}" (error)="api.imageUrl='https://icons.veryicon.com/png/o/internet--web/internet-simple-icon/api-management.png'"/>
           <h4 class="myapick_title">{{ api.title }}</h4>
           <button class="btn myapick_edit" id="{{ api._id }}" (click)="openApiEditor(api)">
             <fa-icon [icon]="faChevronRight"></fa-icon>
           </button>
         </div>
-        
       </div>
       
     </div>
