--- a/src/app/apiview/apiview.component.html
+++ b/src/app/apiview/apiview.component.html
@@ -1,7 +1,7 @@
 <main class="main">
     <div class="main_view" *ngIf="apick">
         <div class="apick">
-            <img class="apick_image" src={{apick.imageUrl}} alt="apic" >
+            <img class="apick_image" src={{apick.imageUrl}} alt="{{apick._id}}" (error)="switchImg(true)">
             <div class="apick_text">
                 <h2 class="apick_title">{{apick.title}}</h2>
                 <p class="apick_description">{{apick.description}}</p>
@@ -9,10 +9,20 @@
         </div>
         <div class="endpoints">
             <h3>ENDPOINTS</h3>
-            <p *ngFor="let endpoint of endpoints">localhost:3000/api/apick/{{apick._id}}/{{endpoint.endpoint}}</p>
+            <div class="endpoints_div" *ngFor="let endpoint of endpoints">
+                <p>localhost:3000/api/apick/{{apick._id}}/{{endpoint.endpoint}}</p>
+                <select class="form-select endpoints_select" name="method" #method>
+                    <option disabled selected>Choose an option</option>
+                    <option *ngFor="let method of endpoint.methods" [value]="method" >{{method}}</option>
+                </select>
+                <button class="btn endpoint_launch btn-dark" (click)="launchTest(endpoint.endpoint, method)">Launch test!</button>
+            </div>
+            
+
         </div>
     </div>
     <div class="main_json">
-        respuesta json
+        <textarea class="json_body" [(ngModel)]="objectToPost"></textarea>
+        <pre class="json_response">{{response | json}}</pre>
     </div>
 </main>
