--- a/src/app/modify-api/modify-api.component.html
+++ b/src/app/modify-api/modify-api.component.html
@@ -30,13 +30,9 @@
     </form>
   </div>
 
-  <div class="modify_methods">
+  <app-custom-endpoint class="modify_methods" *ngIf="openedCustomizer" [dataCustomizer]='dataCustom'>
     
-    <div class="method_data">Aca ira el metodo para editar</div>
-    <div class="method_response">
-      Y este sera el espacio donde se mostrara la respuesta del metodo
-    </div>
-  </div>
+  </app-custom-endpoint>
 </div>
 <div class="modify_endpoint">
   <h4>ENDPOINTS</h4>
@@ -53,7 +49,7 @@
       <button class="btn" (click)="open(nameEdit)"><fa-icon [icon]="faPenToSquare" class="text-dark"></fa-icon></button>
     </div>
     <div class="modify_method" *ngFor="let method of ['GET', 'POST']">
-      <button>/{{ endpoint.endpoint }}</button>
+      <button (click)="openCustomizer(dataApick.title ,endpoint.endpoint, method)">/{{ endpoint.endpoint }}</button>
       <button
         class="modify_button btn"
         [class.button_inactive]="!endpoint.methods.includes(method)"
