--- a/src/app/custom-endpoint/custom-endpoint.component.html
+++ b/src/app/custom-endpoint/custom-endpoint.component.html
@@ -27,8 +27,10 @@
       </label>
     </div>
   </form>
-  <input type="button" value="Save" class="btn btn-success" (click)="saveCustomData()">
+  <div class="d-flex flex-column w-100">
+    <input type="button" value="Launch test" class="btn btn-outline-primary" (click)="launchTest()">
+    <input type="button" value="Save" class="btn btn-success" (click)="saveCustomData()">
+  </div>
 </div>
-<div class="method_response">
-  Y este sera el espacio donde se mostrara la respuesta del metodo
-</div>
+<textarea class="json_response" placeholder="Resquest body" disabled>{{documents | json}}</textarea>
+
