Background image as local resource

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@
   font-family: "Space Grotesk", sans-serif;
 }
 html {
-  background-image: url(https://p4.wallpaperbetter.com/wallpaper/607/724/1017/material-design-abstract-hd-wallpaper-preview.jpg);
+  background-image: url("../src/assets/background.jpg");
   background-size: cover;
 }
 body {
