Validations when changing endpoint name

--- a/src/app/custom-endpoint/custom-endpoint.component.html
+++ b/src/app/custom-endpoint/custom-endpoint.component.html
@@ -28,7 +28,7 @@
     </div>
   </form>
   <div class="d-flex flex-column w-100">
-    <input type="button" value="Launch test" class="btn btn-outline-primary" (click)="launchTest()">
+    <input type="button" value="Test original document" class="btn btn-outline-primary" (click)="launchTest()">
     <input type="button" value="Save" class="btn btn-success" (click)="saveCustomData()">
   </div>
 </div>
