Api Key finished

--- a/src/app/modify-api/modify-api.component.html
+++ b/src/app/modify-api/modify-api.component.html
@@ -32,7 +32,7 @@
     </form>
   </div>
 
-  <app-custom-endpoint class="modify_methods" *ngIf="openedCustomizer" [customizerData]='dataCustom' [endpointData]="endpointCustom">
+  <app-custom-endpoint class="modify_methods" *ngIf="openedCustomizer" [customizerData]='dataCustom' [endpointData]="endpointCustom" [apiId]="dataApick._id">
     
   </app-custom-endpoint>
 </div>
