--- a/src/app/apiview/apiview.component.html
+++ b/src/app/apiview/apiview.component.html
@@ -17,11 +17,11 @@
                 </select>
                 <button class="btn endpoint_launch btn-dark" (click)="launchTest(endpoint.endpoint, method)">Launch test!</button>
             </div>
-            
-            <div class="endpoints_div mt-5" *ngIf="apiKey.keyEnabled">
-                <p>{{apiKey.keyEnabled ? apiKey.apiKey.key : "Only logued users! Please log in"}}</p>
-                <button class="btn endpoint_launch btn-dark" >Get api key</button>
+            <div class="endpoints_div mt-5" *ngIf="enabledKey || false">
+                <p>{{apiKey || "Generate your API KEY. Only for registered users"}}</p>
+                <button class="btn endpoint_launch btn-dark" (click)="generateApiKey()">Get api key</button>
             </div>
+            
         </div>
         
     </div>
