--- a/src/app/title/title.component.html
+++ b/src/app/title/title.component.html
@@ -1,4 +1,4 @@
-<a routerLink="/" class="title" (click)="showSearch()">
+<a routerLink="/" class="title">
     <span class="title_main">API</span>
     <span class="title_second">ck</span>
 </a>
